--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ modelixVersion = 2021.3.136
 projectionalEditorVersion = 1.5.7
 incrementalVersion = 0.1.4
 mpsBuildVersion = 1.0.8
+modelixPatchVersion = 140
