--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 core = "2.4.0"
 incremental = "0.1.4"
 buildTools = "1.0.11"
+modelixMPSPatch = "145"
 
 [libraries]
 modelix-authorization = { group = "org.modelix", name = "authorization", version.ref = "core"}
